WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195609
In CachedFrame's constructor, release-assert that DOMWindow still has a frame after page-caching subframes
https://bugs.webkit.org/show_bug.cgi?id=195609
Summary
In CachedFrame's constructor, release-assert that DOMWindow still has a frame...
Ryosuke Niwa
Reported
2019-03-12 00:05:41 PDT
https://trac.webkit.org/changeset/242677
added release assertions to DOMWindow::suspendForPageCache. But we still won't be able to tell whether active DOM objects are detaching frames, or if creating CachedFrame on subframes is causing the frame to go way. Add a release assertion immediately after creating CachedFrame for subframes to distinguish this case.
Attachments
Adds a release assert
(1.69 KB, patch)
2019-03-12 00:08 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-wk2
(7.44 MB, application/zip)
2019-03-12 02:30 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-03-12 00:08:03 PDT
Created
attachment 364362
[details]
Adds a release assert
EWS Watchlist
Comment 2
2019-03-12 02:30:27 PDT
Comment on
attachment 364362
[details]
Adds a release assert
Attachment 364362
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11470551
New failing tests: imported/w3c/web-platform-tests/webrtc/simplecall.https.html
EWS Watchlist
Comment 3
2019-03-12 02:30:29 PDT
Created
attachment 364372
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Chris Dumez
Comment 4
2019-03-12 09:44:31 PDT
Comment on
attachment 364372
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 Unrelated.
WebKit Commit Bot
Comment 5
2019-03-12 09:50:52 PDT
Comment on
attachment 364362
[details]
Adds a release assert Clearing flags on attachment: 364362 Committed
r242797
: <
https://trac.webkit.org/changeset/242797
>
WebKit Commit Bot
Comment 6
2019-03-12 09:50:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-03-12 09:51:33 PDT
<
rdar://problem/48811192
>
Chris Dumez
Comment 8
2019-05-03 15:37:42 PDT
Comment on
attachment 364362
[details]
Adds a release assert View in context:
https://bugs.webkit.org/attachment.cgi?id=364362&action=review
> Source/WebCore/history/CachedFrame.cpp:150 > + RELEASE_ASSERT(m_document->domWindow()->frame());
Getting hit (
rdar://problem/49877867
).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug